--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="CameraTextStr">Camera</string>
     <string name="toggleOffStr">Off</string>
     <string name="toggleOnStr">On</string>
+    <string name="logoImageContentDescription">Echolocation Logo</string>
 </resources>
