added show all faces button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="toggleOnStr">On</string>
     <string name="logoImageContentDescription">Echolocation Logo</string>
     <string name="defaultSpeechToText">The highlighted face is the one who is talking! Disclaimer: given technology restraints, the app is not accurate.</string>
+    <string name="buttonTextStr">Show All Faces</string>
 </resources>
